--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>ALEJANDRA LOAIZA</h1>
-								<p>ARCHITECT & FABACADEMY GRADUATE</p>
+								<h1>Alejandra Loaiza</h1>
+								<p>Architectural Designer</p>
 							
 							</div>
 						</div>
