--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+									<p>Send me a message so we can work together:</p>
 									<p class="major">alejandra.loaizagranda@gmail.com</p>
 									<p>https://www.linkedin.com/in/alejandra-loaiza</p>
 									
