--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<article id="awards">
 								<h2 class="major">Awards</h2>
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
-								<p><b>Dialog Women in Architecture and Building Technology Award, </b>  BCIT, 2023</p>
+								<p><b>DIALOG Women in Architecture and Building Technology Award, </b>  BCIT, 2023</p>
 								<p><b>BCIT Alumni Association Award, </b>  BCIT, 2023</p>
 								<p><b>Sam Brown Memorial Scholarship, </b>  BCIT, 2023</p>
 								<p><b>LB Alberti Scholarship for Academic Excellence </b>  Universidad San Francisco de Quito 2013-2019</p>
