--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Alejandra Loaiza Granda</h1>
-								<p><b>BCIT Architectural and Building Technology Student</b><br>Architect (USFQ), Fab Academy graduate</br></p>
+								<p><b>BCIT Architectural and Building Technology Student, </b><br>Architect (USFQ), Fab Academy graduate</br></p>
 							
 							</div>
 						</div>
