--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Alejandra Loaiza Granda</h1>
-								<p><b>BCIT Architectural and Building Technology Student, </b><br>Architect (USFQ), Fab Academy graduate</br></p>
+								<p><b>BCIT Architectural and Building Technology Graduate,</b><br> Architect (USFQ), Fab Academy graduate</br></p>
 							
 							</div>
 						</div>
@@ -111,6 +111,12 @@
 							<article id="awards">
 								<h2 class="major">Awards</h2>
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
+								<p><b>Valedictorian for the School of Construction and the Environment, </b>  Spring Convocation Ceremony BCIT, 2024</p>
+								<p><b>BCIT Architecture Academic Award, </b>  BCIT, 2024</p>
+								<p><b>BC Building Envelope Council Education Foundation Graduating Achievement Award, </b>  BCIT, 2024</p>
+								<p><b>Architectural Institute of British Columbia Award in Architecture, </b>  BCIT, 2024</p>
+								<p><b>Merit Award for Best Architectural Project, </b>  BCIT, 2024</p>
+								<p><b>BCIT International Success Award, </b>  BCIT, 2024</p>
 								<p><b>DIALOG Women in Architecture and Building Technology Award, </b>  BCIT, 2023</p>
 								<p><b>BCIT Alumni Association Award, </b>  BCIT, 2023</p>
 								<p><b>Sam Brown Memorial Scholarship, </b>  BCIT, 2023</p>
