--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
 							<article id="awards">
 								<h2 class="major">Awards</h2>
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
-								<p><b>Valedictorian for the School of Construction and the Environment, </b>  Spring Convocation Ceremony BCIT, 2024</p>
-								<p><b>BCIT Architecture Academic Award, </b>  BCIT, 2024</p>
-								<p><b>BC Building Envelope Council Education Foundation Graduating Achievement Award, </b>  BCIT, 2024</p>
-								<p><b>Architectural Institute of British Columbia Award in Architecture, </b>  BCIT, 2024</p>
-								<p><b>Merit Award for Best Architectural Project, </b>  BCIT, 2024</p>
-								<p><b>BCIT International Success Award, </b>  BCIT, 2024</p>
-								<p><b>DIALOG Women in Architecture and Building Technology Award, </b>  BCIT, 2023</p>
-								<p><b>BCIT Alumni Association Award, </b>  BCIT, 2023</p>
-								<p><b>Sam Brown Memorial Scholarship, </b>  BCIT, 2023</p>
-								<p><b>LB Alberti Scholarship for Academic Excellence </b>  Universidad San Francisco de Quito 2013-2019</p>
-								<p><b>Chancellor’s List (GPA>3.7) </b>  Universidad  San Francisco de Quito 2013-2014</p>
-								<p><b>Dean’s List (GPA>3.5), </b>  Universidad  San Francisco de Quito 2014-2015, 2018</p>
+								<p><b>Valedictorian for the School of Construction and the Environment, </b>  Spring Convocation Ceremony - BCIT 2024</p>
+								<p><b>BCIT Architecture Academic Award </b> - BCIT 2024</p>
+								<p><b>BC Building Envelope Council Education Foundation Graduating Achievement Award </b> - BCIT 2024</p>
+								<p><b>Architectural Institute of British Columbia Award in Architecture </b> - BCIT 2024</p>
+								<p><b>Merit Award for Best Architectural Project </b> - BCIT 2024</p>
+								<p><b>BCIT International Success Award </b> - BCIT 2024</p>
+								<p><b>DIALOG Women in Architecture and Building Technology Award </b>  BCIT, 2023</p>
+								<p><b>BCIT Alumni Association Award </b> - BCIT 2023</p>
+								<p><b>Sam Brown Memorial Scholarship </b> - BCIT 2023</p>
+								<p><b>LB Alberti Scholarship for Academic Excellence </b>  - Universidad San Francisco de Quito 2013-2019</p>
+								<p><b>Chancellor’s List (GPA>3.7) </b>  - Universidad  San Francisco de Quito 2013-2014</p>
+								<p><b>Dean’s List (GPA>3.5) </b>  - Universidad  San Francisco de Quito 2014-2015, 2018</p>
 							</article>
 
 						<!-- Contact -->
