--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<article id="awards">
 								<h2 class="major">Awards</h2>
 								<!--  <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
-								<p><b>Valedictorian for the School of Construction and the Environment, </b>  Spring Convocation Ceremony - BCIT 2024</p>
+								<p><b>Valedictorian for the School of Construction and the Environment </b>   - Spring Convocation Ceremony, BCIT 2024</p>
 								<p><b>BCIT Architecture Academic Award </b> - BCIT 2024</p>
 								<p><b>BC Building Envelope Council Education Foundation Graduating Achievement Award </b> - BCIT 2024</p>
 								<p><b>Architectural Institute of British Columbia Award in Architecture </b> - BCIT 2024</p>
